# feelpp

./: !  ++psvk.state  ++psvn.state  .bzrignore  .clang-format  .codacy.yml  .cvsignore  .dir-locals.el  .emacs-dirvars  .gitattributes  .gitignore  .gitmodules  .travis.yml  AUTHORS  Buildind.doc  C00_GettingStarted.doc  C02_ManipulatingMeshes.doc  C03_ComputingIntegrals.doc  C04_ManipulatingFunctionSpaces.doc  C05_WritingVariationalFormulations.doc  C06_SolvingLinearAlgebra.doc  CHANGELOG.adoc  CMakeLists.txt  CMakePresets.json  CMakePresets.jsonnet  CNAME  CONTRIBUTING.adoc  COPYING  COPYING.adoc  COPYING.md  CTestConfig.cmake  ChangeLog  ChangeLog.md  Credits  Credits.md  Credits.org  Doxyfile.in  Environment.doc  Forms.doc  INSTALL  (+13368 more)
applications/: .gitignore  CMakeLists.txt  Makefile.am  Makefile.dist  configure.ac
applications/check/: .gitignore  CMakeLists.txt  check.cpp  check.py
applications/crb/: CMakeLists.txt
applications/databases/: CMakeLists.txt  configure  converter_database_acusim.cpp  export_database.cpp  pod_database.cpp
applications/fmi/: CMakeLists.txt  fmu.cpp  readfmu.cpp
applications/mesh/: CMakeLists.txt  mesh.cpp  mesh_partitioner.cpp  mesh_partitioner.hpp  mesh_partitioner_hypercube.cpp  mesh_partitioner_simplex.cpp  partition.adoc  partitioner.adoc  submesh.cpp
applications/models/: CMakeLists.txt
applications/polyvis/: .gitignore  CMakeLists.txt  Makefile.am  basisgen.hpp  crouzeixraviart.hpp  crouzeixraviart2d.cpp  crouzeixraviart3d.cpp  generate_pointset.py  geom.cpp  hermite.cpp  hermite.hpp  hypercube.py  lagrange.cpp  lagrange.hpp  lagrange1d.cpp  lagrange2d.cpp  lagrange3d.cpp  main.cpp  nedelec.hpp  nedelec2d.cpp  nedelec3d.cpp  nedelec3d.hpp  orthonormalpset.hpp  orthonormalpset1d.cpp  orthonormalpset2d.cpp  orthonormalpset3d.cpp  polysetvis.py  polyvis.cpp  polyvis.hpp  polyvisapp.cpp  polyvisbase.cpp  polyvisbase.hpp  raviartthomas.cpp  raviartthomas.hpp  raviartthomas2d.cpp  raviartthomas3d.cpp  simplex.py  square.py  stdpoly.cpp  triangle.py
benchmarks/: .gitignore  CMakeLists.txt  Makefile.am  SConscript  atlocal.in  benchmarksuite.at  configure.ac  logs.cpp  logs.hpp
benchmarks/ATTIC/: CMakeLists.txt  logs.cpp  logs.hpp
benchmarks/compilation/: CMakeLists.txt  feel1.cpp  feelcore.cpp
benchmarks/convergence/: .gitignore  CMakeLists.txt  Makefile.am  ale.cpp  ale.hpp  ale1.cpp  convergence.at  laplacian.hpp  laplacian1d2dP1.cpp  laplacian1d2dP5.cpp  laplacian1dP1.cpp  laplacian1dP5.cpp  laplacian2d3dP1.cpp  laplacian2dP1.cpp  laplacian2dP1h.cpp  laplacian2dP1v.cpp  laplacian2dP4v.cpp  laplacian2dP5.cpp  laplacian2dP5h.cpp  laplacian3dP1.cpp  laplacian3dP1h.cpp  laplacian3dP2.cpp  laplacian3dP3.cpp  laplacian3dP5.cpp  laplacianv.hpp  nonlinearpow.cpp  stokes.cpp  stokes.hpp  stokes21.cpp  stokes31.cpp  stokes32.cpp  stokes33.cpp  stokesbase.hpp
benchmarks/curl/: CMakeLists.txt  curl.hpp
benchmarks/darcy/: CMakeLists.txt  cst.cfg  darcy.hpp  hdg.hpp
benchmarks/ethiersteinman/: ethiersteinman.cpp  ethiersteinman.hpp  ethiersteinman3d.cpp  ethiersteinman_os12.cpp  ethiersteinman_osb1.cpp  ethiersteinman_osb2.cpp  ethiersteinman_osin.cpp
benchmarks/feelpp/: 02-mesh.cpp  03-space.cpp  04-integrate.cpp  99-specx.cpp  99-taskflow.cpp  CMakeLists.txt  env.cpp  gmc.cpp
benchmarks/hdg/: CMakeLists.txt  README.adoc  beam.geo  beam3d.geo  conv.hpp  conv_main.cpp  convelasticity.hpp  cvg_mixedelasticity.hpp  cvg_mixedelasticity_main.cpp  cvg_mixedpoisson.hpp  cvg_mixedpoisson_main.cpp  hdg_laplacian.hpp  hdg_laplacian_ibc.hpp  hdg_linear_elasticity.hpp  hdg_linear_elasticity_ibc.hpp  le-beam-3d.cfg  le-beam.cfg  oneelt.msh  quarter-turn2D.geo  tetra.geo  twoelt-p2.msh
benchmarks/kovasznay/: Makefile.am  kovasznay.cpp  kovasznay.hpp  kovasznay2d.cpp  kovasznay_osin.cpp  kovasznay_osit.cpp  options.cpp  options.hpp
benchmarks/laplacian/: .gitignore  CMakeLists.txt  convergence.py  nonlinearpow.cpp
benchmarks/magnetostatic/: CMakeLists.txt  README.md  backend.cfg  batchGenerator.sh  checkMat.mod  displayRes.tex  logParser.sh  precAFP2D.geo  precAFP2D.mod  precAFP2D_poly.cfg  precAFP2D_sin.cfg  precAFP3D.geo  precAFP3D.mod  precAFP3D_poly.cfg  regul.cfg  (+6 more)
contrib/: .gitignore  CMakeLists.txt  Makefile.am  Makefile.dist  configure.ac  configure.in.in
data/: CMakeLists.txt  Cylref.mesh  genlist.sh
doc/: .gitignore  CMakeLists.txt  Makefile.am  configure.ac
examples/: .gitignore  CMakeLists.txt  Makefile.am  Makefile.dist  SConscript  configure.ac  examplesuite.at  ligand.pqr  receptor.pqr
feel/: .gitignore  CMakeLists.txt  debug.areas  feel.hpp  feelconfig.h.in  feelinfo.h.in  feells.hpp  options.cpp  options.hpp
feelpp/: CMakeLists.txt  feelpp.code-workspace
life/: .gitignore  CMakeLists.txt  Makefile.am  SConscript  debug.areas  options.cpp  options.hpp
pyfeelpp-all/: CMakeLists.txt  pyfeelpp  pyfeelpp-mor  pyfeelpp-toolboxes  research
quickstart/: .gitignore  .tests.hdg_laplacian_2d  .tests.hdg_laplacian_3d  .tests.laplacian_2d  .tests.laplacian_3d  .tests.stokes_2d  CMakeLists.txt  README.adoc  README.org  elasticity.py  feel2d-ns.geo  feel3d.geo  laplacian.cpp  laplacian.py  laplacian_onefeel.cpp  ls_laplacian.cfg  ls_laplacian.cpp  nafems-le-1.py  qs_adr.cpp  qs_elasticity.cpp  qs_elasticity_pure_traction.cpp  qs_ginac.cpp  qs_hdg_elasticity.cpp  qs_hdg_laplacian.cpp  qs_hdg_stokes.cpp  qs_laplacian.cfg  qs_laplacian.cpp  qs_laplacian.doc  qs_laplacian_2d.cfg  qs_laplacian_3d.cfg  qs_laplacian_circle.cfg  qs_laplacian_onefeel.cfg  qs_nlopt.cpp  qs_ns.cfg  qs_ns.cpp  qs_ns.doc  qs_ns_simple.cfg  qs_steady_ns_btpcd.cpp  qs_stokes.cfg  qs_stokes.cpp  (+2 more)
research/: .gitignore  2022-m2-phifem-1  CMakeCache.txt  CMakeLists.txt  INSTALL  Makefile.am  Makefile.dist  article.fluid_rigid_body_ale  brain  cerema  configure.ac  holo3  ibat  swimmer
testsuite/: .cvsignore  .gitignore  CMakeLists.txt  Makefile.am  Makefile.testsuite  README  README.asc  README.md  SConscript  gentest.sh  referencestates.md  run.sh  suppressions.txt  testsuite.at  testsuite.cpp  testsuite.hpp
toolboxes/: CMakeLists.txt  README.adoc
(+13089 files in other folders)
